Fix overflow

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -23,6 +23,7 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: grey;
+    overflow: hidden;
   }
 }
 
@@ -40,34 +41,17 @@ h1 {
 
 .container {
   padding: 0 8px;
-  width: auto;
   overflow-x: auto;
-
-  /* width: auto;
-  min-width: 0.01%;
-  overflow: auto; */
 }
 
 .table {
   border-collapse: separate;
   border-spacing: 0 8px;
-  /* margin: 0 8px; */
   border: 1px solid black;
   box-sizing: border-box;
-  /* width: 100%;
-  min-width: 750px; */
 
+  width: 100%;
   display: inline-table;
-  width: 1000px;
-
-  /* overflow-x: auto;
-  display: block;
-  width: fit-content;
-  max-width: 100%; */
-  
-  /* display: block;
-  overflow-x: auto;
-  white-space: nowrap; */
 
   &__row {
     background-color: #deddd1;
@@ -78,10 +62,8 @@ h1 {
     text-align: left;
     padding: 0 16px;
     white-space: nowrap;
-    /* min-width: 50px; */
   }
 }
-
 
 @media screen and (max-width: 720px) {
   .app {
